--- a/src/app/layer-panel/layer-panel.component.html
+++ b/src/app/layer-panel/layer-panel.component.html
@@ -1,90 +1,6 @@
 <!--suppress AngularUndefinedBinding -->  <!-- to fix a bug in webstorm -->
 
-<!--
-<div id='second' class ="example-list"   *ngIf="showLayerPanel$ | async" [style.left.px]="x" [style.top.px]="y"
-     (panstart)="onPanStart($event)" (panmove)="onPan($event)" cdkDragBoundary=".map" cdkDrag >
-  <mat-card class = 'layerPanelCard'>
-    <mat-card-title-group>
-      <mat-card-title class ="panelTitle">Layers  </mat-card-title>
-      <button mat-flat-button   (click)="closeLayerPanel(false)" >
 
-        <mat-icon class="closeLayerPanel" matTooltip="Close layer Panel">close</mat-icon>
-      </button>
-    </mat-card-title-group>
-    <mat-divider class = "toolbarDivider"></mat-divider>
-    <mat-accordion #groupsAccordion cdkDropList (cdkDropListDropped)="dropExpansion($event)">
-      <mat-expansion-panel *ngFor= "let group of groupLayers" cdkDrag>
-
-          <mat-expansion-panel-header [collapsedHeight]="'2.1vw'" [expandedHeight]="'2.1vw'">
-            <mat-panel-title>
-              <mat-selection-list [id]="group.groupName">
-                <mat-list-option class = "group" checkboxPosition="before" (click)="onGroupLayerVisClick($event,group)"
-                                 [selected]="group.visible" >
-                  {{group.groupName}}
-                </mat-list-option>
-              </mat-selection-list>
-            </mat-panel-title>
-          </mat-expansion-panel-header>
-
-          <mat-accordion>
-            <ng-container  *ngFor= "let layer of group.layers" >
-            <mat-expansion-panel>
-              <mat-expansion-panel-header [collapsedHeight]="'2.1vw'" [expandedHeight]="'2.1vw'">
-                <mat-panel-title>
-                <mat-selection-list (selectionChange)="onSelectedChanged($event)">
-                <mat-list-option class="example-box mat-primary" [value]="layer.layerName"
-                                (click)="onLayerVisClick($event,layer,group.groupName)" checkboxPosition="before"
-                                [ngClass]="layerActive == layer.layerName? 'active': 'normal'"  [selected]="layer.visible">
-                 <div class="selectLayer" >
-                  <div style="display:flex;align-items:center">
-                     {{layer.layerName}}
-                   </div>
-                   <span class="spacer"></span>
-                   <div *ngIf="layer.wfs">
-                     <button mat-icon-button matTooltip="Edit layer"
-                             (click)="onEditLayerClick($event, layer, group)"
-                             [ngClass]="layer.onEdit ? 'activeAction': 'normal'">
-                       <mat-icon  class= "editIcon" >edit</mat-icon>
-
-                     </button>
-                   </div>
-                   <span class="spacer"></span>
-                   <div>
-                     <button mat-icon-button matTooltip="Identify elements in the layer"
-                             (click)="onIdentifyLayerClick($event, layer, group.groupName)"
-                             [ngClass]="layer.onIdentify ? 'activeAction': 'normal'">
-                       <mat-icon class= "editIcon" >info_outline</mat-icon>
-                     </button>
-                     <div *ngIf="layer.layerForRanking">
-                      <button   mat-icon-button (click)="onRatingLayerClick($event, layer, group.groupName)">
-                        <mat-icon  svgIcon="ratingActionPlan"></mat-icon>
-                      </button>
-                     </div>
-                   </div>
-                  </div>
-                </mat-list-option>
-                </mat-selection-list>
-               </mat-panel-title>
-
-              </mat-expansion-panel-header >
-                <mat-list *ngFor="let icon of layer.legendLayer">
-                  <div>
-                    <div class="iconTitle">
-                      <img class = iconLegend [src] = icon.iconSrc alt="legend">
-                    </div>
-                    <div class="iconTitle">
-                      {{icon.title}}
-                    </div>
-                  </div>
-                </mat-list>
-            </mat-expansion-panel>
-            </ng-container>
-          </mat-accordion>
-        </mat-expansion-panel>
-    </mat-accordion>
-  </mat-card>
-</div>
-!-->
 
 <div id='third' class ="example-list"   *ngIf="showLayerPanel$ | async" [style.left.px]="x" [style.top.px]="y"
      (panstart)="onPanStart($event)" (panmove)="onPan($event)" cdkDragBoundary=".map" cdkDrag >
@@ -100,7 +16,7 @@
     </mat-card-title-group>
     <mat-divider class = "toolbarDivider"></mat-divider>
     <mat-accordion #groupsAccordion cdkDropList (cdkDropListDropped)="dropExpansion($event)">
-      <mat-expansion-panel *ngFor= "let group of groupLayers" cdkDrag>
+      <mat-expansion-panel *ngFor= "let group of sgroupLayers" cdkDrag>
         <!--togglePosition='before'-->
         <mat-expansion-panel-header [collapsedHeight]="'2.1vw'" [expandedHeight]="'2.1vw'">
           <mat-panel-title>
