--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -23,8 +23,11 @@
    <!-- <button mat-icon-button (click)="startAction('Identify')"  aria-label="identify" matTooltip="Identify element">
       <mat-icon svgIcon="identify"></mat-icon>
     </button> -->
-    <button mat-icon-button (click)="searchOnMap"  aria-label="identify" matTooltip="Search in map">
-      <mat-icon>search</mat-icon>
+    <button mat-icon-button (click)="findExposedPeople()"  aria-label="identify" matTooltip="Find exposed people to noise levels">
+      <mat-icon class="svgIconToolbar" svgIcon="noiseAnnoyance"></mat-icon>
+    </button>
+    <button mat-icon-button (click)="searchOnMap()"  aria-label="identify" matTooltip="Search in map">
+      <mat-icon >search</mat-icon>
     </button>
   </mat-toolbar>
 </mat-card>
