--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -10,11 +10,13 @@
   <div id="popup-content" #content></div>
 </div>
 <div *ngIf="loadedWfsLayers">
-<app-layer-panel  [groupLayers] = "groupsLayers"
+  <!--[groupLayers] = "groupsLayers"-->
+<app-layer-panel   [groupLayers] = "groupsLayersSubject.asObservable()"
                  (layerVisClick)="updateMapVisibleLayer($event)"
 (editLayerClick)="updateEditingLayer($event)"  (groupLayerVisClick)="updateMapVisibleGroupLayer($event)"
 (layersOrder) = "updateOrderGroupsLayers($event)"
-(identifyLayerClick)="startIdentifying($event)">   </app-layer-panel>
+(identifyLayerClick)="startIdentifying($event)">
+</app-layer-panel>
 </div>
 <app-dynamic-form #dynamicForm  [questions]="questionsSubject.asObservable()"
                    [showForm]="showFormSubject.asObservable()"
