--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -55,9 +55,9 @@ footer a {
 
 @media screen and (min-width: 900px) {
   .mat-toolbar {
-   // background-color: #78002e; // primary dark color only for test removed later to keep the primary color
+    background-color: #78002e; // primary dark color only for test removed later to keep the primary color
     // test for GECCO
-    background-color: #3F51B5;
+    //background-color: #3F51B5;
   }
   .mat-icon {
     font-size: 24px;
@@ -68,8 +68,8 @@ footer a {
 }
   @media screen and (min-width: 1400px){
     .mat-toolbar {
-      // background-color: #ad1457; // primary normal color only for test removed later to keep the primary color
-      background-color: #3F51B5;
+      background-color: #ad1457; // primary normal color only for test removed later to keep the primary color
+    //  background-color: #3F51B5;
     }
     .mat-icon {
         font-size: 36px;
@@ -79,8 +79,8 @@ footer a {
 
   @media screen and (min-width: 1900px){
     .mat-toolbar  {
-      // background-color: darkred;  // only for test removed later to keep the primary color
-      background-color: #3F51B5;
+     // background-color: darkred;  // only for test removed later to keep the primary color
+   //   background-color: #3F51B5;
       .mat-icon {
         font-size: 48px;
       }
