--- a/src/app/dialog-population-exposed/dialog-population-exposed.component.html
+++ b/src/app/dialog-population-exposed/dialog-population-exposed.component.html
@@ -11,6 +11,12 @@
            </mat-select>
       </mat-form-field>
       <mat-form-field appearance="fill">
+        <mat-label>Select</mat-label>
+        <mat-select class="form-control" id = "selectedNoiseLayer" formControlName="selectedNoiseLayer" required >
+          <mat-option   *ngFor= "let noiseLayer of data.noiseMapList"  [value]="noiseLayer"> {{noiseLayer | titlecase}} </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <mat-form-field appearance="fill">
         <mat-label>Select low noise level (>=)</mat-label>
         <mat-select class="form-control" id = "lowLevel" formControlName="lowLevel" required>
             <mat-option *ngFor= "let level of noiseLevels"  [value]="level"> {{level}} </mat-option>
