--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -26,9 +26,13 @@
     <button mat-icon-button (click)="findExposedPeople()"  aria-label="identify" matTooltip="Find exposed people to noise levels">
       <mat-icon class="svgIconToolbar" svgIcon="noiseAnnoyance"></mat-icon>
     </button>
-    <button mat-icon-button (click)="searchOnMap()"  aria-label="identify" matTooltip="Search in map">
-      <mat-icon >search</mat-icon>
+    <button mat-icon-button (click)="findExposedInstitutions()"  aria-label="identify" matTooltip="Search in map">
+      <mat-icon class="svgIconToolbar" svgIcon="noiseOrgAnnoyance"></mat-icon>
     </button>
+
+    <!--<button mat-icon-button (click)="searchOnMap()"  aria-label="identify" matTooltip="Search in map">
+      <mat-icon >search</mat-icon>
+    </button>  -->
   </mat-toolbar>
 </mat-card>
  <!--  <div class="location">({{x}}, {{y}})</div> esto muestra las coordenas que se usan para la nueva pos-->
