--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -26,7 +26,7 @@
     <button mat-icon-button (click)="findExposedPeople()"  aria-label="identify" matTooltip="Find exposed people to noise levels">
       <mat-icon class="svgIconToolbar" svgIcon="noiseAnnoyance"></mat-icon>
     </button>
-    <button mat-icon-button (click)="findExposedInstitutions()"  aria-label="identify" matTooltip="Search in map">
+    <button mat-icon-button (click)="findExposedInstitutions()"  aria-label="identify" matTooltip="Find exposed institutions to noise levels">
       <mat-icon class="svgIconToolbar" svgIcon="noiseOrgAnnoyance"></mat-icon>
     </button>
 
