--- a/src/app/editing-toolbar/editing-toolbar.component.scss
+++ b/src/app/editing-toolbar/editing-toolbar.component.scss
@@ -34,9 +34,9 @@
   margin-top: 0;
   padding-right: 0;
  }
-.closeIcon:hover {
+/*.closeIcon:hover {
   background-color: #fff2e1 !important;
-}
+} */
 .matCloseWrapper{
   padding: 0 0 0 0;
   width: 1.7vw !important;
