--- a/src/app/dynamic-form/dynamic-form.component.html
+++ b/src/app/dynamic-form/dynamic-form.component.html
@@ -1,4 +1,8 @@
-<div class ="example-list"  *ngIf="showForm$ | async" cdkDragBoundary=".map" cdkDrag > <!---->
+<div class="parent">
+<div class ="example-list"  *ngIf="showForm$ | async"
+     cdkDrag
+     cdkDragRootElement=".cdk-overlay-pane"
+     cdkDragBoundary=".parent">
  <mat-card>
       <mat-card-title-group>
         <mat-card-title>Details</mat-card-title>
@@ -89,3 +93,4 @@
   </mat-card>
 </div>
 
+</div>
