--- a/src/app/layer-panel/layer-panel.component.scss
+++ b/src/app/layer-panel/layer-panel.component.scss
@@ -1,18 +1,12 @@
-.closeIcon :hover {
+/*.closeIcon :hover {
   background-color: #e35183;  //to focus the icons
   color: blue;
-}
-/*.editIcon {
-  font-size: 1vw;
-  text-align: center;
-  padding-top: 0;
-  padding-left: 0;
-  margin-top: 5px;
-  padding-right: 0;
-}
-*/
+} */
+
+
 .spacer {
   flex: 1 1 auto;
+  width: 0.7vw;
 }
 .toolbarDivider {
   padding-top: 5px !important;
@@ -29,6 +23,10 @@
   //max-width: 20%;
   position: relative;
   padding-left: 0.1vw !important;
+  align-self: center;
+}
+.example-box:last-child {
+  border: none;
 }
 .group {
   color: rgba(0, 20, 0, 0.87);
@@ -42,7 +40,7 @@
   width: 100%;
   //max-width: 20%;
   position: relative;
-  padding-top: 0px !important;
+  padding-top: 1px !important;
   padding-bottom: 0px !important;
   height:1.2vw !important;
 }
@@ -65,7 +63,6 @@
   padding-left: 0px;
 }
 
-
 .cdk-drag-preview {
   box-sizing: border-box;
   border-radius: 4px;
@@ -73,17 +70,11 @@
   0 8px 10px 1px rgba(0, 0, 0, 0.14),
   0 3px 14px 2px rgba(0, 0, 0, 0.12);
 }
-
 .cdk-drag-placeholder {
   opacity: 0;
 }
-
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
-}
-
-.example-box:last-child {
-  border: none;
 }
 
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
@@ -100,6 +91,9 @@
   border: solid 1px;
   width: 14px;
   height: 14px;
+}
+:host ::ng-deep .mat-pseudo-checkbox::after {
+  color: darkred !important;
 }
 
 // to remove the padding in mat-list
@@ -119,30 +113,28 @@
 :host ::ng-deep .mat-list-text {
   padding-left: 4px !important;  // rigth left
   padding-top: 0px !important;  // rigth left
-  //height: 2vw !important;
 }
 
 :host ::ng-deep .mat-list-base {
-  padding-top: 2px !important;
+  padding-top: 9px !important;
 }
 
-:host ::ng-deep .mat-pseudo-checkbox::after {
-  color: darkred !important;
-}
-:host ::ng-deep .mat-option.mat-active {
-  background: blue !important;
-}
-
-:host ::ng-deep .mat-icon-button {
-  width: 1.2vw !important;
-  height: 1.2vw !important;
+.mat-icon-button {
+ // width: 1.2vw !important;
+  // height: 1.2vw !important;
   // top: 0.3vw !important;
 }
-:host ::ng-deep .mat-icon {
+.mat-icon {
   //top: 0.3vw !important;
-  margin-top: -1.3vw !important;
+//  margin-top: -1.3vw !important;
+ // width: 1vw !important;
+  // height: 1vw !important;
+}
+.mat-expansion-panel-header-title {
+  height: 40px;
 }
 
+/*
 .closeLayerPanel {
   padding: 0 0 0 0 !important;
   width: 1.7vw !important;
@@ -151,10 +143,14 @@
   margin-top: 0 !important;
 }
 
-// mat-focus-indicator mat-icon-button mat-button-base
-
-// mat-focus-indicator mat-icon-button mat-button-base
-
+.matCloseWrapper{
+  padding: 0 0 0 0 !important;
+  width: 1.7vw !important;
+  height: 1.7vw !important;
+  // line-height: 18px !important;
+  margin-top: 0 !important;
+}
+*/
 .panelTitle {
   padding-left: 1vw;
   padding-top: 0.3vw;
@@ -162,7 +158,9 @@
 .active {
   background: #fff2e1;
 }
-
+.activeAction {
+  background: #e35183;   //green;
+}
 .onEdit{
   background: #d6c0c8;
   // padding-top: -0.3vw;
@@ -182,11 +180,7 @@
 :host ::ng-deep .mat-expansion-panel-body {
   padding: 0 24px 6px;
 }
-.spacer {
-  flex: 1 1 auto;
-  width: 0.7vw;
-}
-.activeAction {
-  background: #e35183;   //green;
-}
 
+:host ::ng-deep  .mat-button  {
+  vertical-align: top !important;
+}
