--- a/src/app/map/map.component.scss
+++ b/src/app/map/map.component.scss
@@ -2,16 +2,21 @@
 .map {
   width: 100%;
   height: 93% ;
-  z-index: 0;
+  z-index: 200;
   position: absolute;
+  border-color: #e35183;
+  border-style: solid;
+  border-width: 1px;
+ //padding-top: 0%;
 }
 
 ::ng-deep .ol-tooltip {
+ // tooltip fr measuring distances or areas
   position: relative;
   background: rgba(0, 0, 0, 0.5);
   border-radius: 4px;
-  color: white;
-  padding: 4px 8px;
+  color: #4a1f1f;
+  // padding: 4px 8px;
   opacity: 0.7;
   white-space: nowrap;
   font-size: 12px;
@@ -44,7 +49,7 @@
   position: absolute;
   height: 1px;
   width: 1px;
-  z-index: 100;
+  z-index: 120;
   border: 2px solid white;
 }
 [data-tooltip]:before {
@@ -81,7 +86,7 @@
   position: absolute;
   background-color: white;
   box-shadow: 0 1px 4px rgba(0,0,0,0.2);
-  padding: 15px;
+  padding: 10px;
   border-radius: 10px;
   border: 1px solid #cccccc;
   bottom: 12px;
