--- a/src/app/layer-panel/layer-panel.component.scss
+++ b/src/app/layer-panel/layer-panel.component.scss
@@ -151,10 +151,11 @@
   margin-top: 0 !important;
 }
 */
-.panelTitle {
+
+/*.panelTitle {
   padding-left: 1vw;
   padding-top: 0.3vw;
-}
+} */
 .active {
   background: #fff2e1;
 }
