--- a/src/app/editing-toolbar/editing-toolbar.component.scss
+++ b/src/app/editing-toolbar/editing-toolbar.component.scss
@@ -2,12 +2,13 @@
   z-index: 200;
   #width: 3%;  //3%
   max-width: 45%;
-  margin-left: 25%;  //95%
+  margin-left: 30%;  //95%
   margin-top:5%;
   flex-direction: row;
   position: absolute;
   border-radius: 3px;
   //background-color: #ad1457!important;   //same that primary color
+  background: white;
 }
 .editToolbar:hover {
   cursor:pointer;
@@ -16,6 +17,7 @@
   flex-direction: row;
   height: 100%; //100% of the parent (div)
   // the primary color of the theme
+  background: white;
 }
 .container{
   display: flex;
@@ -54,6 +56,7 @@
   float: right;
   height: 100%;
   max-width:  1.5vw;
+  padding-right: 20px;
 }
 .divClosing :hover {
   background-color: transparent ;  //to avoid the pinky color
