--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -52,10 +52,10 @@ footer a {
   background-color: rgb(15, 15, 16);
 }
 .app-content{
-  width: 100vw;
-  height: 93vh;
-  border-color: #ffcc33;
-  border-style: solid;
+  width: 100%;
+  height: 93%;
+ // border-color: #ffcc33;
+  // border-style: solid;
   z-index:100;
 }
 @media screen and (min-width: 900px) {
