--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,12 +31,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; overflow: h
   padding-top: 0.3vw;
 }
 
+
+
 .matCloseWrapper{
   padding: 0 0 0 0 !important;
   width: 1.7vw !important;
   height: 1.7vw !important;
   // line-height: 18px !important;
-  margin-top: 0 !important;
+  margin-top: -7px !important;
 }
 
 .mat-flat-button{
