--- a/src/app/editing-toolbar/editing-toolbar.component.scss
+++ b/src/app/editing-toolbar/editing-toolbar.component.scss
@@ -23,7 +23,7 @@
   display: flex;
 }
 .mat-toolbar :hover {
-  background-color: #e35183;  //to focus the icons
+  background-color: #f198b6;  //a lighter color to solve the confusion between active and hover
 }
 .closeIcon {
   font-size: 0.8vw;
