--- a/src/app/dynamic-form/dynamic-form.component.scss
+++ b/src/app/dynamic-form/dynamic-form.component.scss
@@ -1,6 +1,7 @@
 .example-list{
-  left: 60% !important;
-  max-width: 40%;
+  left: 40% !important;
+  max-width: 35%;
+  width: 28%;
   top: 40% !important;
   opacity:0.9;
   background-color: white;
@@ -34,13 +35,14 @@
 }
 .closingButton{
   text-align: right;
+  // float: left;
 }
 
 input[type="range"] {
   width: 4vw;
 }
 input[type=text] {
- // width: 5vw;
+ width: 12vw;
  // height: 2vw ;
   padding: 40px 10px !important;
   border: 2px solid red;
@@ -49,4 +51,16 @@ input[type=text] {
   width: 100%;
   height:100%;
 }
+
+.simple-keyboard-hidden{
+  display: none;
+}
+.hide-keyboard {
+  overflow: hidden;
+  height: 0;
+}
+.mat-input-element{
+  width: 12vw;
+}
+
 
